[package]
name = "either_field"
version = "1.2.0"
edition = "2024"
license = "GPL-3.0-only"
readme = "../README.md"
repository = "https://github.com/FallBackITA27/either_field/"
keywords = ["macros","structs","omit","either","fields"]
categories = ["data-structures", "development-tools::build-utils"]
description = "Macro for generating different types off of a template struct"
authors = ["FallBackITA27 <leilamassanova@gmail.com>", "ekstdo <minhala2003@mailo.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.105"
quote = "1.0.43"
syn = {version = "2.0.114", features = ["parsing","full","derive","extra-traits"]}
